--- a/Final/HomeMain.css
+++ b/Final/HomeMain.css
@@ -50,19 +50,17 @@ html {
     background-color: #333;
     overflow: hidden;
     width: 500px;
-    margin-left: 3.5%
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-    margin-left:4%;
     float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 10px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 28px;
     font-family: Century;
 }
 
@@ -78,4 +76,25 @@ html {
     color: white;
 }
 
+.flex {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .flex-item + .flex-item {
+    margin-left: 10px;
+  }
+  
+  .a {
+    margin-top: 15px;
+    background-color: #0066FF;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+  }
 
